updating information, fixing css issues with Tooltip

--- a/src/cv/data/projects.json
+++ b/src/cv/data/projects.json
@@ -3,7 +3,7 @@
         "name": "Mobile Banking App",
         "employer": "SoftwareGroup",
         "period": "2021 - present",
-        "description": "Developing an iOS App for Mobile Banking acopaning a Internet Banking Portal;\nDirect client communication;",
+        "description": "Developing an whitelabel iOS App for Mobile Banking accompanying an Internet Banking Portal;\nDirect client communication;\nLeading a team;\nConducing technical trainings;",
         "stack": [
             "HTML",
             "CSS",
